Name:                xlsx

Version:             0.1.0.3

Synopsis:            Simple and incomplete Excel file parser/writer
Description:
    This library can help you to get some data read and written in Office
    Open XML xlsx format. Small subset of xlsx format is supported.
    .
    For examples look into "Codec.Xlsx".
    .
    Format is covered by ECMA-376 standard:
    <http://www.ecma-international.org/publications/standards/Ecma-376.htm>
Extra-source-files:
                     changelog


Homepage:            https://github.com/qrilka/xlsx
Bug-Reports:         https://github.com/qrilka/xlsx/issues
License:             MIT
License-file:        LICENSE
Author:              Tim, Max, Kirill Zaborsky
Maintainer:          qrilka@gmail.com

Category:            Codec
Build-type:          Simple

Cabal-version:       >=1.10


Library
  Hs-source-dirs:    src
  Exposed-modules:   Codec.Xlsx
                     , Codec.Xlsx.Parser
                     , Codec.Xlsx.Types
                     , Codec.Xlsx.Writer
                     , Codec.Xlsx.Lens

  Build-depends:     base         == 4.*
                     , containers   >= 0.5.0.0
                     , transformers >= 0.3.0.0
                     , bytestring   >= 0.10.0.2
                     , text         >= 0.11.3.1
                     , lens         >= 3.8 && < 5
                     , conduit      >= 1.0.0
                     , xml-types    == 0.3.*
                     , xml-conduit  >= 1.1.0
                     , zip-archive  == 0.2.*
                     , digest       == 0.0.*
                     , zlib         == 0.5.4.*
                     , utf8-string  >= 0.3.7
                     , time         >= 1.4.0.1
                     , old-time     >= 1.1.0.1
                     , old-locale   >= 1.0.0.5
                     , data-default == 0.5.*
  Default-Language:     Haskell2010


Executable           test
  Hs-source-dirs:    src
  Other-modules:     Codec.Xlsx
                     , Codec.Xlsx.Parser
                     , Codec.Xlsx.Writer
  ghc-options:       -Wall -threaded

  main-is:           Test.hs

  Build-depends:     base, containers, transformers, bytestring, text
                     , conduit     >= 1.0.0
                     , xml-types   == 0.3.*
                     , xml-conduit >= 1.1.0
                     , zip-archive == 0.2.*
                     , lens        >= 3.8 && < 5
                     , digest      >  0.0.0.1
                     , zlib
                     , utf8-string
                     , time
                     , old-time
                     , old-locale
                     , data-default == 0.5.*
  Default-Language:     Haskell2010

test-suite data-test
  type: exitcode-stdio-1.0
  main-is:  DataTest.hs
  hs-source-dirs: test/
  Build-Depends: base,
                 containers,
                 time,
                 old-time,
                 xlsx,
                 smallcheck,
                 HUnit,
                 tasty,
                 tasty-smallcheck,
                 tasty-hunit
  Default-Language:     Haskell2010

source-repository head
  type:     git
  location: git://github.com/qrilka/xlsx.git
