Name:                xlsx

Version:             0.7.2

Synopsis:            Simple and incomplete Excel file parser/writer
Description:
    This library can help you to get some data read and written in Office
    Open XML xlsx format. Small subset of xlsx format is supported.
    .
    For examples look into "Codec.Xlsx".
    .
    Format is covered by ECMA-376 standard:
    <http://www.ecma-international.org/publications/standards/Ecma-376.htm>
    .
    4th edition of the standard with the transitional schema is used for this library.
Extra-source-files:
                     CHANGELOG.markdown


Homepage:            https://github.com/qrilka/xlsx
Bug-Reports:         https://github.com/qrilka/xlsx/issues
License:             MIT
License-file:        LICENSE
Author:              Tim, Max, Kirill Zaborsky
Maintainer:          qrilka@gmail.com

Category:            Codec
Build-type:          Simple
Tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2
Cabal-version:       >=1.10


Library
  Hs-source-dirs:    src
  ghc-options:       -Wall
  Exposed-modules:   Codec.Xlsx
                   , Codec.Xlsx.Types
                   , Codec.Xlsx.Formatted
                   , Codec.Xlsx.Lens
                   , Codec.Xlsx.Parser
                   , Codec.Xlsx.Parser.Internal
                   , Codec.Xlsx.Parser.Internal.Fast
                   , Codec.Xlsx.Parser.Internal.Util
                   , Codec.Xlsx.Parser.Internal.PivotTable
                   , Codec.Xlsx.Types.AutoFilter
                   , Codec.Xlsx.Types.Cell
                   , Codec.Xlsx.Types.Comment
                   , Codec.Xlsx.Types.Common
                   , Codec.Xlsx.Types.ConditionalFormatting
                   , Codec.Xlsx.Types.DataValidation
                   , Codec.Xlsx.Types.Drawing
                   , Codec.Xlsx.Types.Drawing.Chart
                   , Codec.Xlsx.Types.Drawing.Common
                   , Codec.Xlsx.Types.Internal
                   , Codec.Xlsx.Types.Internal.CfPair
                   , Codec.Xlsx.Types.Internal.CommentTable
                   , Codec.Xlsx.Types.Internal.ContentTypes
                   , Codec.Xlsx.Types.Internal.CustomProperties
                   , Codec.Xlsx.Types.Internal.DvPair
                   , Codec.Xlsx.Types.Internal.FormulaData
                   , Codec.Xlsx.Types.Internal.Relationships
                   , Codec.Xlsx.Types.Internal.SharedStringTable
                   , Codec.Xlsx.Types.PageSetup
                   , Codec.Xlsx.Types.PivotTable
                   , Codec.Xlsx.Types.PivotTable.Internal
                   , Codec.Xlsx.Types.Protection
                   , Codec.Xlsx.Types.RichText
                   , Codec.Xlsx.Types.SheetState
                   , Codec.Xlsx.Types.SheetViews
                   , Codec.Xlsx.Types.StyleSheet
                   , Codec.Xlsx.Types.Table
                   , Codec.Xlsx.Types.Variant
                   , Codec.Xlsx.Writer
                   , Codec.Xlsx.Writer.Internal
                   , Codec.Xlsx.Writer.Internal.PivotTable

  Build-depends:     base         == 4.*
                   , attoparsec
                   , base64-bytestring
                   , binary-search
                   , bytestring   >= 0.10.8.0
                   , conduit      >= 1.0.0
                   , containers   >= 0.5.0.0
                   , data-default
                   , deepseq      >= 1.4
                   , errors
                   , extra
                   , filepath
                   , lens         >= 3.8 && < 5
                   , mtl          >= 2.1
                   , network-uri
                   , old-locale   >= 1.0.0.5
                   , safe         >= 0.3
                   , text         >= 0.11.3.1
                   , time         >= 1.4.0.1
                   , transformers >= 0.3.0.0
                   , vector       >= 0.10
                   , xeno         >= 0.3.2
                   , xml-conduit  >= 1.1.0
                   , zip-archive  >= 0.2
                   , zlib         >= 0.5.4.0
  Default-Language:     Haskell2010
  Other-Extensions:  DeriveDataTypeable
                     FlexibleInstances
                     NoMonomorphismRestriction
                     OverloadedStrings
                     RankNTypes
                     RecordWildCards
                     TemplateHaskell
                     TupleSections

test-suite data-test
  type: exitcode-stdio-1.0
  main-is:  Main.hs
  hs-source-dirs: test/
  other-modules: AutoFilterTests
               , Common
               , CommonTests
               , CondFmtTests
               , Diff
               , DrawingTests
               , PivotTableTests
               , Test.SmallCheck.Series.Instances
  Build-Depends: base
               , bytestring
               , containers
               , Diff >= 0.3.0
               , groom
               , lens
               , mtl
               , raw-strings-qq
               , smallcheck
               , tasty
               , tasty-hunit
               , tasty-smallcheck
               , text
               , time
               , vector
               , xlsx
               , xml-conduit >= 1.1.0
  Default-Language:     Haskell2010

source-repository head
  type:     git
  location: git://github.com/qrilka/xlsx.git

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Main.hs
  build-depends: base
               , bytestring
               , criterion
               , xlsx
  default-language: Haskell2010
