cabal-version:      3.0
name:               examples
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Nitin Prakash
maintainer:         prakash.nitin63@gmail.com
-- copyright:
build-type:         Simple


library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates

  exposed-modules: GenerateSheet

  build-depends:  base >= 4.7
                , bytestring
                , containers
                , microlens
                , text
                , time
                , xlsx

